# Android-use-Off-Screen-Mode-for-OpenGLES-rendering

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/namdq/glesoffscreenrender/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  GLOffscreen.cpp  GLOffscreen.h  Matrix.cpp  Matrix.h  Texture.cpp  Texture.h  TextureSample.cpp  TextureSample.h  androidopengljni.cpp  native-lib.cpp  opengldef.h
app/src/main/java/com/namdq/glesoffscreenrender/: MainActivity.java
app/src/main/jni/include/opencv2/: cvconfig.h
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/namdq/glesoffscreenrender/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
